# Medical-DVRK-AR

./: CMakeLists.txt  DVRK-setup-README.md  README.md  VREP-README.md  WeeklyProgress.md  package.xml  pcl_stich_dvrk.py
.catkin_tools/profiles/default/: devel_collisions.txt
config/: blaser_SIMULATED.json
data/: 60degree_norm.npy  80degree_norm.npy  Alex_norm_all_downward.npy  blaser_results.npy  blaser_results_encore1.npy  blaser_results_encore2.npy  blaser_results_moving.npy  downPCL.npy  explaination.txt  final_planner_points.npy  liverGrid.npy  liverGrid_inward_normals.npy  liverGrid_norm.npy  liverGrid_outward_normals.npy  liverGrid_outward_normals_cleanForPlanning.npy  liver_encore2.stl  meshlab.ply  new_planner_points.npy  palpation_path_100cols_100rows.npy  palpation_path_100cols_200rows.npy  palpation_path_10rows_10cols.npy  palpation_path_10rows_20cols.npy  palpation_path_20rows_20cols.npy  palpation_path_20rows_20cols.ply  palpation_path_25rows_25cols.npy  palpation_path_36cols_36rows.npy  palpation_path_50cols_50rows.npy  palpation_path_testing.npy  palpation_result.npy  palpation_result_100.npy  palpation_result_150.npy  palpation_result_200.npy  palpation_result_50.npy  points_with_stiffness.npy  scanning_path_200_points.npy  searchable_surface_encore1.npy  searchable_surface_encore2.npy  sorted_liverGrid_norm.npy  wave.stl  xyz_for_stiffness_est.npy
data/results/: blaser_results_1.npy  blaser_results_2.npy
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/blaser_hand_tracking/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/blaser_pcl/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/blaser_vins_config/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/blaser_pcl/: LaserExtractionConfig.h  VoxelGridStitch.h  VoxelGridStitchRequest.h  VoxelGridStitchResponse.h
devel/share/blaser_hand_tracking/cmake/: blaser_hand_trackingConfig-version.cmake  blaser_hand_trackingConfig.cmake
devel/share/blaser_pcl/cmake/: blaser_pcl-msg-extras.cmake  blaser_pcl-msg-paths.cmake  blaser_pclConfig-version.cmake  blaser_pclConfig.cmake
devel/share/blaser_pcl/docs/: LaserExtractionConfig-usage.dox  LaserExtractionConfig.dox  LaserExtractionConfig.wikidoc
devel/share/blaser_vins_config/cmake/: blaser_vins_configConfig-version.cmake  (+1 more)
launch/: dvrk_arm_rviz.launch  dvrk_registration_blaser.launch
logs/blaser_pcl/: build.make.000.log.stderr
src/blaser-ros/: .gitattributes  .gitignore  BlaserCheatSheet.md  DemoInstructions.md  README.md  add_im.py  blaser_reminder.txt
src/blaser-ros/blaser_hand_tracking/: CMakeLists.txt  package.xml
src/blaser-ros/blaser_pcl/: CMakeLists.txt
src/blaser-ros/blaser_pcl/cfg/: LaserExtraction.cfg
src/blaser-ros/blaser_pcl/config/: blaser_laser_test.rviz  blaser_ur5e.rviz  blaser_ur5e_superFine.rviz  calib_A1001_1280x960.yaml  calib_A1001_640x480.yaml  calib_A1001_640x480_new.yaml  calib_ELP_2MP_1280x720.yaml  calib_ELP_2MP_640x360.yaml  calib_vrep_640x480.yaml  dyn_reconfig_vrep.yaml
src/blaser-ros/blaser_pcl/launch/: start_ELP2MP_1280x720.launch  start_ELP2MP_640x360.launch  start_blaser_1001_1280x960.launch  start_blaser_1001_640x480.launch  start_blaser_640x480.launch  start_blaser_mrsd.launch  start_blaser_novid.launch  start_blaser_vrep.launch  start_fromfile_1001_640x480.launch
src/blaser-ros/blaser_pcl/src/: blaser_image_pub.cpp  blaser_pointcloud_pub.cpp  configuration.hpp  im_proc.cpp  im_proc.hpp  pclGen.cpp  pclGen.hpp  pointcloud_saver.cpp  testim.cpp  visualization.cpp  visualization.hpp  voxel_grid_filter.cpp
src/blaser-ros/blaser_vins_config/: CMakeLists.txt  cyimu_bringup.py
src/medical_dvrk_ar/: arm_scan.py  blaser_sim.py  broadcast_for_blaser.py  camera_blaser_registration.py  integrated.py  listener_for_blaser.py  pcl_stich_dvrk.py  pcl_stitch_dvrk.py  robot_scanning.py  scan_liver_no_wrist_movement.py  scan_segmented_liver_NoWristMovement.py  test_program.py  test_program_circle.py  test_scan_withwrist.py
src/medical_dvrk_ar/Helper/: helper_readme.md  readme.md
src/medical_dvrk_ar/ICP/: 1_100groundTruth.ply  liverPLY_trimmed.ply  moved_ground_truth.pcd
src/medical_dvrk_ar/Modeling/: Blaser_frame_to_tf_tree.py  bounding_circle.py  integrated.py  liverGrid.py  make_stiffness.py  modeling_main.py  palpation_stiffness.py  pc_postprocessing_for_palpation.py  pc_sticher.py  pc_stitcher.py  pointcloud_sort.py  pointcloud_sort_filter.py  readme.md  stiffness_map.py  tumor_acc_intersect_convexHull.py  tumor_accuracy.py  tumor_accuracy_convexhull.py  visualize_moving_points.py  visualize_points_norm.py  visualize_stiffness.py
src/medical_dvrk_ar/MotionEstimation/: 2pointcloudRegistration.py  ManualPointCloudCrop.py  frameRegistration.py  hsv_points_filter.py  hsv_threshold.py  pcdConverter.py  position.npy  rospc2open3dpcdConverter.py  seg.py  source.pcd  svd_pca_main.py  svdmain.py  target.pcd  time.npy  timestamps.npy
src/medical_dvrk_ar/PCA_FFT/: fft.py  motion_fft.py  motion_pca.py  motion_pca_test.py  pca.py  timestamps.npy  transformation_matrix.npy
src/medical_dvrk_ar/Registration/: dvrk_registration.py  readme.md  registration_params_blaser.yaml
src/medical_dvrk_ar/Tracking/: Main_Spring_Semester.py  PCDconverter_with_HSV.py  frameRegistration.py  hsv_points_filter.py  main_spring_semester.py  pca_fft.py  pcdConverter.py  readme.md  seg.py  segmentation_setting.py  visualize_moving_points.py
src/medical_dvrk_ar/dvrkPlanner/: gp.py  gp_grid.py  gp_opt.py  liver_scan_NoWristMovement.py  palpation_result.npy  palpation_result_100pokings.npy  palpation_stiffness.py  path_planner.py  path_planner_palpation.py  point_estimation.py  predict_z.py  readme.md  robot_motion.py  robot_scanning.py  scan_numpy.py  scan_segmented_liver_NoWristMovement.py  test_motion_compensation_z.py  test_program.py  testdata.npy  util.py  visualize_moving_points.py
(+48 files in other folders)
